【优化】graalvm反射信息